# lume-plugins

./: .dockerignore  .gitattributes  .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  docker-compose.yml  package.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: plugin-submission.yml
.github/workflows/: build-lume-chrome-native-host.yml  publish-index.yml  validate.yml
.lume-plugin/: marketplace.json
docs/: REVIEW_CHECKLIST.md  SUBMISSION_GUIDE.md
plugins/browser/: README.md  lume-plugin.json
plugins/example-hello/: README.md  lume-plugin.json  mcp.json
plugins/lume-chrome/: IMPLEMENTATION_NOTES.md  README.md  lume-plugin.json  package.json  tsconfig.json
plugins/lume-chrome/native-host/: Cargo.toml
plugins/lume-chrome/native-host/manifests/: com.lume.browser.template.json
plugins/lume-chrome/native-host/src/: app_server.rs  assets.rs  config.rs  diagnostics.rs  framing.rs  main.rs  pairing.rs  protocol.rs
plugins/lume-chrome/native-host/tests/: lifecycle.rs
plugins/obsidian-bridge/: README.md  esbuild.config.mjs  lume-plugin.json  mcp.json  package-lock.json  package.json  protocol.md  tsconfig.json
plugins/spreadsheets/: LICENSE  README.md  lume-plugin.json
scripts/: build-index.mjs  verify-native-host-artifacts.mjs
scripts/lib/: audit-permissions.mjs  audit-permissions.test.mjs  build-manifest.mjs  build-manifest.test.mjs  manifest-rules.mjs  (+3 more)
service/: Dockerfile  README.md  build-snapshot.mjs  config.mjs  read-git-commit.mjs  server.mjs  snapshot.mjs  snapshot.test.mjs
(+156 files in other folders)
