[package]
name = "lume-chrome-host"
version = "0.4.0"
edition = "2021"

[dependencies]
anyhow = "1"
base64 = "0.22"
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.24"
url = "2"
uuid = { version = "1", features = ["v4"] }
