[package]
name = "lume-chrome-host"
version = "0.5.1"
edition = "2021"

[dependencies]
anyhow = "1"
base64 = "0.22"
hmac = "0.13"
hkdf = "0.13"
keyring = { version = "4", features = ["v1"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.11"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
